crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__blocks-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = do {console.log(x); x};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..33,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "foo",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Let(
                        Let {
                            span: 14..29,
                            pattern: None,
                            type_ann: None,
                            init: App(
                                App {
                                    span: 14..28,
                                    lam: Member(
                                        Member {
                                            span: 14..25,
                                            obj: Ident(
                                                Ident {
                                                    span: 14..21,
                                                    name: "console",
                                                },
                                            ),
                                            prop: Ident(
                                                Ident {
                                                    span: 22..25,
                                                    name: "log",
                                                },
                                            ),
                                        },
                                    ),
                                    args: [
                                        ExprOrSpread {
                                            spread: None,
                                            expr: Ident(
                                                Ident {
                                                    span: 26..27,
                                                    name: "x",
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                            body: Ident(
                                Ident {
                                    span: 30..31,
                                    name: "x",
                                },
                            ),
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
