crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__function_application-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"foo(a, ...b);\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..13,
                expr: App(
                    App {
                        span: 0..12,
                        lam: Ident(
                            Ident {
                                span: 0..3,
                                name: "foo",
                            },
                        ),
                        args: [
                            ExprOrSpread {
                                spread: None,
                                expr: Ident(
                                    Ident {
                                        span: 4..5,
                                        name: "a",
                                    },
                                ),
                            },
                            ExprOrSpread {
                                spread: Some(
                                    7..10,
                                ),
                                expr: Ident(
                                    Ident {
                                        span: 10..11,
                                        name: "b",
                                    },
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
    },
)
