crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__if_else.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"if (true) { 5 } else { 10 };\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..28,
                expr: IfElse(
                    IfElse {
                        span: 0..27,
                        cond: Lit(
                            Bool(
                                Bool {
                                    span: 4..8,
                                    value: true,
                                },
                            ),
                        ),
                        consequent: Lit(
                            Num(
                                Num {
                                    span: 12..13,
                                    value: "5",
                                },
                            ),
                        ),
                        alternate: Some(
                            Lit(
                                Num(
                                    Num {
                                        span: 23..25,
                                        value: "10",
                                    },
                                ),
                            ),
                        ),
                    },
                ),
            },
        ],
    },
)
